# gyomu_app_20260503

./: .gitignore  .template-update.yml  README.md  project-config.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: orchestrator.agent.md
.github/workflows/: ci.yml  issue-lifecycle.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
agents/: orchestrator.agent.md
configs/: pipeline_default.toml
docs/: MODE_GUIDE.md  UPGRADE_GUIDE.md  architecture.md  kashio_db_design_v1.0.md  kashio_phase1_scope_v1.2.md  kashio_techstack_v1.0.md  orchestration.md  plan.md
kashio-kintal/: .env.local.example  .gitignore  jest.config.ts  jest.setup.ts  package-lock.json  package.json
kashio-kintal/src/: middleware.ts
kashio-kintal/src/__tests__/: b001_qr_punch.test.ts  b002_ipad_punch.test.ts  b003_daily_view.test.ts  b004_staff_view.test.ts  n002_migration.test.ts  n003_auth.test.ts  setup.test.ts
kashio-kintal/src/app/: layout.tsx  page.tsx
kashio-kintal/src/lib/: attendance-utils.ts  attendance.ts  auth.ts  email.ts  punch-utils.ts  punch.ts  utils.ts
kashio-kintal/supabase/: config.toml
kashio-kintal/supabase/migrations/: 20260503083624_n002_initial_schema.sql  20260504000001_n002_initial_data.sql
scripts/: run_pipeline.py  setup_github.sh  template_update.py
src/my_package/: __init__.py
src/my_package/core/: __init__.py  (+3 more)
src/observability/: __init__.py
src/sample/: __init__.py
tests/: conftest.py  test_core.py  test_pipeline.py  test_smoke.py
(+35 files in other folders)
