[project]
name = "dev-orchestration-template"
version = "0.1.0"
description = "AI エージェントパイプラインの開発オーケストレーションテンプレート"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# OpenTelemetry 計装に必要な依存ライブラリ。
# プロジェクトで計装を有効化する場合: uv sync --extra observability
observability = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "mutmut>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

# observability パッケージは OTel SDK の有無で type: ignore の要否が変わるため、
# unused-ignore を抑制する。
[[tool.mypy.overrides]]
module = "observability.*"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
